# lihil

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.MD  CHANGELOG.md  CONTRIBUTING.md  LIHIL_COPILOT.md  MCP.md  README.md  README_CN.md  ROADMAP.md  app.py  context7.json  coverage.json  demo.py  dev.py  example.py  fast.py  index.html  makefile  mkdocs.yml  pyproject.toml  settings.toml  ws.py
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml  cov.yml  makedocs.yml
advanced/: index.html
advanced_usage/: index.html
archive/blueprint/: index.html
archive/comparison/: index.html
archive/middleware/: index.html
archive/simple_bench/: index.html
benchmark/: Dockerfile  index.html  lihil.py  makefile  uvicorn_server.py
contribute/: index.html
demo/: main.py  settings.toml  ws.py
demos/: auth_example.py  example.py  fast.py  todo.py
deployment/: index.html
design/: automapper.py  blueprint.py  error.py  structure.md
design/structure/: index.html
docs/: advanced.md  advanced_usage.md  app.py  benchmark.md  blog.md  comparison.md  contribute.md  example.py  fast.py  feature.md  features.md  index.md  middleware.md  minicourse.md  simple_bench.md  testing.md  tutorial.md  tutorials.md  websocket_high_level_design.md
docs/archive/: blueprint.md  comparison.md  simple_bench.md
docs/demos/: app.py  auth_example.py  example.py  fast.py  wb.py
docs/design/: blueprint.py  dto_codegen.py
examples/: mcp_example.py  web_bench.py
features/: index.html
lihil/: __init__.py  asgi.py  channel.py  config.py  ds.py  endpoint.py  errors.py  hub.py  lihil.py  local_client.py  problems.py  props.py  routing.py  vendor_types.py  vendors.py  websocket.py
lihil/auth/: base.py  jwt.py  oauth.py  supabase.py
lihil/config/: __init__.py  app_config.py  config_parser.py  loader.py  parser.py
lihil/constant/: resp.py  status.py
lihil/di/: __init__.py  di.py  params.py  returns.py
lihil/ds/: __init__.py  event.py  resp.py
lihil/endpoint/: __init__.py  endpoint.py  params.py  returns.py  signature.py
lihil/http/: __init__.py  endpoint.py  routing.py
lihil/interface/: __init__.py  asgi.py  marks.py  problem.py  props.py  struct.py
lihil/middlewares/: __init__.py
lihil/oas/: __init__.py  doc_ui.py  model.py  schema.py
lihil/plugins/: __init__.py  bus.py  interface.py  jwt.py  oauth.py  premier.py  provider.py  registry.py  sse.py  testclient.py  testing.py
lihil/plugins/auth/: __init__.py  base.py  jwt.py  oauth.py  supabase.py
lihil/plugins/bus/: __init__.py  bus.py  errors.py
lihil/plugins/mcp/: __init__.py  server.py  transport.py
lihil/server/: runner.py  server.py
lihil/signature/: __init__.py  params.py  parser.py  returns.py  signature.py  tool.py  tool_parser.py
lihil/socket/: __init__.py  bus.py  channel.py  dispatcher.py  hub.py  protocol.py  websocket.py
lihil/utils/: algorithms.py  json.py  parse.py  phasing.py  sqldbg.py  string.py  threading.py  typing.py  visitor.py
minicourse/: index.html
profiling/: profile_1.md  spy_1.md
scripts/: create_version_branch.py
search/: search_index.json
specs/: socket_channel_protocol_prd.md
testing/: index.html
tests/: conftest.py  test_app_config.py  test_bus.py  test_coverage_edges.py  test_di.py  test_ds.py  test_endpoint.py  test_lhl.py  test_lihil_extra.py  test_oas.py  test_oas_schema_edges.py  test_parse.py  test_problems.py  test_read_config.py  test_resp_mark.py  test_routing.py  test_typing.py  test_websocket_route.py
tests/core/: test_lhl.py  test_routing.py
tests/features/: conftest.py  test_endpoint.py  test_oas.py  test_params_validation.py  test_resp_mark.py
tests/features/di/: test_di_main.py  test_di_params.py  test_di_returns.py  test_resp_mark.py
tests/features/oas/: test_doc_ui.py  test_oas.py  test_problems.py
tests/features/test_di/: test_di_main.py  test_di_params.py
tests/test_core/: test_config.py  test_endpoint.py  test_hub.py  test_lhl.py  test_lhl_extra_cov.py  test_routing.py  test_websocket_coverage.py  test_ws.py
tests/test_di/: test_di_main.py  test_di_params.py  test_di_returns.py  test_ep_params.py  test_ep_returns.py  test_params_validation.py  test_resp_mark.py
tests/test_endpoint/: test_endpoint.py  test_ep_main.py  test_ep_params.py  test_ep_returns.py  test_ep_signature.py  test_ep_with_asyncgen_return_oas.py  test_ep_with_eventstream.py  test_ep_with_node_derived_param.py  test_params_validation.py  test_resp_mark.py
tests/test_features/: test_v0_2_12.py  test_v0_2_18.py  test_v0_2_27.py  test_v0_2_37.py  test_v0_2_5.py  test_v0_2_7.py  test_v0_2_8.py  test_v0_2_9.py
tests/test_interface/: test_struct_iter.py
tests/test_issues/: test_default_root_not_created.py  test_oas_for_upload_file.py
tests/test_oas/: test_doc_ui_extra.py  test_model_post_init.py  test_oas.py  test_problems.py
tests/test_plugins/: test_auth.py  test_auth_jwt_extra.py  test_bus.py  test_mcp_simple.py  test_premier.py  test_premier_stubbed.py  test_spb.py
tests/test_signature/: test_parser_extra.py  test_tool_parser.py
tests/test_utils/: test_coverage_utils.py  test_json_extra.py  test_json_utils.py  test_other_utils.py  test_parse.py  test_typing.py  test_vendors_missing_testclient.py
tutorials/: index.html
