[project]
authors = [{name = "raceychan", email = "raceychan@gmail.com"}]
dependencies = [
  "httptools>=0.6.4",
  "ididi==1.5.2",
  "msgspec>=0.19.0",
  "starlette>=0.45.3",
  "uvicorn>=0.34.0",
  "uvloop>=0.21.0",
]
description = "Add your description here"
dynamic = ["version"]
name = "lihil"
readme = "README.md"
requires-python = ">=3.12"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.version]
path = "lihil/__init__.py"

[tool.lihil]
is_prod = true

[tool.lihil.oas]
doc_path = "/docs"

[dependency-groups]
dev = [
  "pytest>=8.3.4",
  "fastapi>=0.115.8",
  "httptools>=0.6.4",
  "pyinstrument>=5.0.1",
  "py-spy>=0.4.0",
  "pytest-asyncio>=0.25.3",
  "ipython>=9.0.2",
  "hatch>=1.14.0",
  "pytest-cov>=6.0.0",
]

[tool.pyright]
exclude = ["tests"]
include = ["lihil/*.py"]
python_version = "3.12"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
addopts = "--strict-markers --capture=no"
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
  "integration_test: marks tests as slow integration tests (deselect with '-m \"not integration_test\"')",
  "debug: marks tests as debug tests (deselect with '-m \"not debug\"')",
  "benchmark: marks tests as benchmark tests (deselect with '-m \"not benchmark\"')",
]
testpaths = ["tests"]

[tool.coverage.run]
omit = [
  "lihil/plugins/*",
]
