[project]
authors = [{ name = "raceychan", email = "raceychan@gmail.com" }]
dependencies = [
  "ididi>=1.6.1",
  "msgspec>=0.19.0",
  "python-multipart>=0.0.20",
  "starlette>=0.45.3",
  "tomli>=2.2.1",
  "typing-extensions>=4.12.2",
]
description = "async python framework offering high level development, low level performance."
dynamic = ["version"]
name = "lihil"
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
standard = ["pyjwt>=2.10.1", "uvicorn[standard]>=0.34.0"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.version]
path = "lihil/__init__.py"


[dependency-groups]
dev = [
  "pytest>=8.3.4",
  "fastapi>=0.115.8",
  "httptools>=0.6.4",
  "pyinstrument>=5.0.1",
  "py-spy>=0.4.0",
  "pytest-asyncio>=0.25.3",
  # "ipython>=9.0.2",
  "hatch>=1.14.0",
  "pytest-cov>=6.0.0",
  "twine>=6.1.0",
  "mkdocs>=1.6.1",
  "pymdown-extensions>=10.14.3",
  "mkdocs-material[imaging]>=9.6.9",
  "pre-commit>=4.2.0",
  "mkdocs-mermaid2-plugin>=1.2.1",
  "uvicorn>=0.34.0",
  "uvloop>=0.21.0",
  "pyjwt>=2.10.1",
  "httpx>=0.28.1",
  "supabase>=2.15.1",
  "sqlalchemy>=2.0.40",
]

[tool.pyright]
exclude = ["tests"]
include = ["lihil/*.py"]
python_version = "3.12"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
addopts = "--strict-markers --capture=no"
asyncio_mode = "auto"
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning:lihil.signature.parser",
]
markers = [
  "integration_test: marks tests as slow integration tests (deselect with '-m \"not integration_test\"')",
  "debug: marks tests as debug tests (deselect with '-m \"not debug\"')",
  "benchmark: marks tests as benchmark tests (deselect with '-m \"not benchmark\"')",
]
testpaths = ["tests"]

[tool.coverage.run]
omit = ["lihil/plugins/*"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if typing.TYPE_CHECKING:",
  "@typing.overload",
  "raise NotImplementedError",
]
