[project]
authors = [{name = "raceychan", email = "raceychan@gmail.com"}]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Internet",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development",
  "Typing :: Typed",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "ididi>=1.6.3",
  "msgspec>=0.19.0",
  "premier>=0.4.1",
  "pydantic>=2.10.6",
  "python-multipart>=0.0.20",
  "starlette>=0.45.3",
  "typing-extensions>=4.12.2",
]
description = "async python framework offering high level development, low level performance."
dynamic = ["version"]
name = "lihil"
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
standard = ["uvicorn[standard]>=0.34.0","tomli>=2.2.1"]
auth = ["pyjwt>=2.10.1", "bcrypt>=4.3.0"]
supabase = ["supabase>=2.15.1"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.version]
path = "lihil/__init__.py"

[dependency-groups]
dev = [
  "pytest>=8.3.4",
  "fastapi>=0.115.8",
  "httptools>=0.6.4",
  "pyinstrument>=5.0.1",
  "py-spy>=0.4.0",
  "pytest-asyncio>=0.25.3",
  "pytest-cov>=6.0.0",
  "hatch>=1.14.0",
  "twine>=6.1.0",
  "mkdocs>=1.6.1",
  "pymdown-extensions>=10.14.3",
  "mkdocs-material[imaging]>=9.6.9",
  "pre-commit>=4.2.0",
  "mkdocs-mermaid2-plugin>=1.2.1",
  "uvicorn>=0.34.0",
  "uvloop>=0.21.0",
  "pyjwt>=2.10.1",
  "httpx>=0.28.1",
  "supabase>=2.15.1",
  "sqlalchemy>=2.0.40",
  "dotenv>=0.9.9",
  "bcrypt>=4.3.0",
  "pydantic>=2.10.6",
]

[tool.pyright]
exclude = ["tests"]
include = ["lihil/*.py"]
python_version = "3.10"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
addopts = "--strict-markers --capture=no"
asyncio_mode = "auto"
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning:lihil.signature.parser",
]
markers = [
  "integration_test: marks tests as slow integration tests (deselect with '-m \"not integration_test\"')",
  "debug: marks tests as debug tests (deselect with '-m \"not debug\"')",
  "benchmark: marks tests as benchmark tests (deselect with '-m \"not benchmark\"')",
]
testpaths = ["tests"]

[tool.coverage.run]
omit = ["lihil/plugins/*", "lihil/utils/typing.py", "lihil/config/loader.py", "lihil/local_client.py"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if typing.TYPE_CHECKING:",
  "@typing.overload",
  "raise NotImplementedError",
  "if sys.version_info >= (3, 12):",
]
